# ary-s-evolved-todo

./: CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  README.md  pyproject.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  deploy-to-hf.sh  drop_fk_constraint.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_chat_tables.py  003_remove_conversations_fk.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: chat.py  tasks.py
backend/app/jobs/: __init__.py
backend/app/middleware/: auth.py  rate_limit.py
backend/app/models/: conversation.py  message.py  task.py  user.py
backend/app/schemas/: chat.py  task.py
backend/app/services/: conversation_service.py  scheduler.py
backend/app/services/ai/: config.py  mcp_runner.py  mcp_server.py
backend/app/services/ai/agents/: language_agents.py  orchestrator.py  task_agents.py
backend/app/services/ai/tools/: task_tools.py
backend/app/utils/: jwt.py
backend/tests/: conftest.py  test_auth.py  test_scheduler.py  test_tasks.py
backend/tests/integration/: test_agent_handoffs.py  test_chat_endpoints.py
backend/tests/unit/: test_agents.py  test_conversation_service.py  test_mcp_tools.py  test_rate_limiter.py
docker/: backend.Dockerfile  compose.yml  docker-compose.yml  frontend.Dockerfile
frontend/: .env.local.example  .gitignore  Dockerfile  env.example  (+6 more)
(+185 files in other folders)
